# BDClinica

./: README.md
ProyectoPrograma/: CMakeLists.txt  Solution1.ssmssln  main.cpp
ProyectoPrograma/Database/: Cita.cpp  Cita.h  Especialidades.cpp  Especialidades.h  Medico.cpp  Medico.h  Paciente.cpp  Paciente.h  Usuarios.cpp  Usuarios.h
ProyectoPrograma/Menus/: citas_menu.cpp  citas_menu.h  especialidades_menu.cpp  especialidades_menu.h  factura.cpp  factura.h  medicos_menu.cpp  medicos_menu.h  pacientes_menu.cpp  pacientes_menu.h
ProyectoPrograma/ODBCConnect/: ODBCConnection.cpp  ODBCConnection.h
ProyectoPrograma/controllers/: CitaControllers.cpp  CitaControllers.h  MedicoControllers.cpp  MedicoControllers.h  PacienteController.cpp  PacienteController.h  especialidadescontrollers.cpp  especialidadescontrollers.h
